--- a/frontend-master/src/global.css
+++ b/frontend-master/src/global.css
@@ -45,7 +45,7 @@ form label {
 .button {
     width: 100%;
     height: 60px;
-    background: #e02041;
+    background: #424242;
     border: 0;
     border-radius: 8px;
     color: #ffffff;
