--- a/frontend-master/src/pages/CadastroFornecedor/styles.css
+++ b/frontend-master/src/pages/CadastroFornecedor/styles.css
@@ -84,15 +84,17 @@ h2 {
     margin-top: 31px;
     height: 47px;
     width: 48px;
+    /* border: 0px; */
+    background-color: #f0f0f5; 
     border-radius: 6px;
     /* background-color: rgb(247, 245, 245); */
-    background-image: url(https://icon-icons.com/icons2/37/PNG/48/Search_find_4120.png);
+    background-image: url("../../assets/btn_search.png") ;
 
 }
 
 #btn_cep:hover {
     transition: 0.5s;
-    filter: brightness(70%);
+    filter: brightness(90%);
     margin-top: 33px;
 }
 
