--- a/frontend-master/src/pages/CadastroProduto/styles.css
+++ b/frontend-master/src/pages/CadastroProduto/styles.css
@@ -36,9 +36,15 @@
     margin-bottom: 8px;
 }
 
-.novoproduto-container .content form .input-group{
+.novoproduto-container .content form .input-group {
     display: flex;
     width: 100%;
+}
+
+.novoproduto-container .content form .input-img {
+    display: flex;
+    width: 100%;
+    margin-left: 22%;
 }
 
 .novoproduto-container .content form .input-group input + input{
@@ -70,6 +76,16 @@
     margin-left: 8px;
 }
 
+.novoproduto-container .content form .imgproduto img {
+    height: 200px;
+    width: 200px;
+    display: flex;
+    margin: auto; 
+    margin-top: -50px;
+    margin-bottom: 50px;
+    border-radius: 50%;
+}
+
 .novoproduto-container .content form fieldset{
     border: 0;
     margin-left: 8px;
@@ -82,6 +98,50 @@ h2 {
 
 
 #img_produto {
-    padding-top: 13px;
+    padding-left: 5px;
 }
+
+#btn_upload {
+    transition: 0.6s;
+    padding: 10px 10px;
+    margin-top: 28px;
+    margin-left: -70px;
+    height: 48px;
+    border: 0px;
+    border-radius: 55px;
+    font-size: 30px;
+    background-color:  transparent;
+    /* background-color:  rgba(184, 184, 184, 0.4); */
+    color: rgb(0, 0, 0);
+}
+
+#btn_upload:hover {
+    transition: 0.6s;
+    background-color:  transparent;
+    margin-top: 36px;
+    /* background-color:  rgba(153, 153, 153, 0.4); */
+    color: rgb(0, 0, 0);
+}
+
+#btn_Cdg {
+    transition: 0.6s;
+    padding: 10px 10px;
+    margin-top: 28px;
+    margin-left: -70px;
+    height: 48px;
+    border: 0px;
+    font-size: 30px;
+    background-color:  transparent;
+    /* background-color:  rgba(184, 184, 184, 0.4); */
+    color: rgb(0, 0, 0);
+}
+
+#btn_Cdg:hover {
+    transition: 0.6s;
+    background-color:  transparent;
+    /* background-color:  rgba(153, 153, 153, 0.4); */
+    color: rgb(100, 100, 100);
+}
+
+
 
