--- a/frontend-master/src/pages/Logon/styles.css
+++ b/frontend-master/src/pages/Logon/styles.css
@@ -37,4 +37,11 @@
     margin-left: 90px; 
 }
 
-
+iframe{
+    width: 500px;
+    height: 500px;
+    margin-top: -15%;
+    margin-left: 20%;
+    border-radius: 8px;
+    box-shadow: 0 0 30px rgba(0,0,0);
+}
