--- a/frontend-master/src/global.css
+++ b/frontend-master/src/global.css
@@ -81,3 +81,42 @@ form label {
 .back-link:hover {
     opacity: 0.8;
 }
+
+
+#btn_add{
+    background: #228B22;
+    padding: 5px 10px;
+    border: 0;
+    border-radius: 8px;
+    color: #ffffff;
+    color: #ffffff;
+    font-weight: 700;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    transition: filter 0.2s;
+}
+
+#btn_add:hover {
+    filter: brightness(90%);
+}
+
+#btn_cancel{
+    background: #e02041;
+    padding: 5px 10px;
+    border: 0;
+    border-radius: 8px;
+    color: #ffffff;
+    color: #ffffff;
+    font-weight: 700;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    transition: filter 0.2s;
+}
+
+#btn_cancel:hover {
+    filter: brightness(90%);
+}
