--- a/frontend-master/src/global.css
+++ b/frontend-master/src/global.css
@@ -83,9 +83,31 @@ form label {
 }
 
 
+#btn_tpMov{
+    background: #3a3939;
+    padding: 5px 10px;
+    margin-bottom: 50px;
+    margin-top: -18px;
+    border: 0;
+    border-radius: 8px;
+    color: #ffffff;
+    color: #ffffff;
+    font-weight: 700;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    transition: filter 0.2s;
+}
+
+#btn_tpMov:hover{
+    filter: brightness(90%);
+}
+
 #btn_add{
     background: #228B22;
     padding: 5px 10px;
+    margin-bottom: 30px;
     border: 0;
     border-radius: 8px;
     color: #ffffff;
