--- a/frontend-master/src/components/Layout/Card.css
+++ b/frontend-master/src/components/Layout/Card.css
@@ -16,33 +16,126 @@
     color: white;
     display: flex;
     justify-content: center;
+    font-size: 18px;
+}
+
+.Card .CdgProduto h2{ 
+    /* margin-left: 10px; */
+    font-size: 17px;
+    padding: 2px 0px 0px 10px;
+    color: black;
+}
+
+.Card .CdgProduto h2 + h2{ 
+    /* margin-left: 10px; */
+    font-size: 17px;
+    padding: 2px 0px 0px 23%;
+    color: rgb(90, 90, 90);
+}
+
+.Card .Url{
+    background-color: #fff;
+    margin: 0px;
+    padding-top: 10px;
+    /* padding-bottom: 10px; */
+    display: flex;
+    /* border-bottom: 1px dotted black; */
+}
+
+.Card .Url img {
+    /* border: 1px solid black; */
+    height: 200px;
+    width: 250px;
+    margin: auto; 
+    border-radius: 10%;
+}
+
+
+.Card .Descricao{
+    background-color: #fff;
+    display: flex;
+    /* justify-content: left; */
+    /* align-items: center; */
+    height: 60px;
+    position: relative;
+    padding: 0px;
+    margin: 0px;
+    padding-top: 0px;
+    border-bottom: 1px dotted black;
+}
+
+.Card .Descricao h2{ 
+    /* border: 1px solid black; */
+    width: 98%;
+    height: auto;
+    position: relative;
+    margin-left: 4px;
+    margin-right: 0px;
+    margin-top: 0px;
+    margin-bottom: 4px;
+    font-weight: normal;
+    padding: 1px 0px 0px 0px;
+    color:#6b6b6b;
+    word-wrap: break-word
 }
 
 .Card .Preco{
     background-color: #fff;
     padding: 0px 10px;
     display: flex;
+    height: auto;
 }
 
 .Card .Preco h2{
-    margin-left: 10px;
-    font-size: 17px;
+    /* margin-left: 10px; */
+    font-size: 40px;
+    padding: 5px 0px 0px 10px;
+    color: #1f6283;
+    height: auto;
+}
+
+
+.Card .QtdeProduto{
+    background-color: #fff;
+    padding: 8px 0px 0px 0px;
+    display: flex;
+    height: auto;
+    width: auto;
+    /* border: 1px solid black; */
+}
+
+.Card .QtdeProduto h2{ 
+    /* margin-left: 10px; */
+    position: static;
+    border: 1px solid black;
+    border-radius: 4px;
+    background-color: #6b6b6b28;
+    margin-left: 200px;
+    font-size: 15px;
+    padding: 2px;
+    color: #332e2e;
+    padding: 2px 5px;
+    /* padding-bottom: 10px; */
+    /* padding-top: -40px; */
+    height: auto;
+    width: 140px;
+    text-align: right;
 }
 
 
 
-
-.Card .Url{
+.Card .CdgProduto{
     background-color: #fff;
-    margin: 0px;
-    padding-top: 5px;
+    padding: 0px 10px;
     display: flex;
     border-bottom: 1px dotted black;
+    
 }
 
-.Card .Url img {
-    height: 200px;
-    width: 200px;
-    margin: auto; 
-    border-radius: 30%;
-}
+
+
+
+
+
+
+
