--- a/frontend-master/src/pages/CadastroProduto/styles.css
+++ b/frontend-master/src/pages/CadastroProduto/styles.css
@@ -77,13 +77,13 @@
 }
 
 .novoproduto-container .content form .imgproduto img {
-    height: 200px;
-    width: 200px;
+    height: 30%;
+    width: 30%;
     display: flex;
     margin: auto; 
     margin-top: -80px;
     margin-bottom: 40px;
-    border-radius: 50%;
+    border-radius: 10%;
 }
 
 .novoproduto-container .content form fieldset{
@@ -99,6 +99,7 @@ h2 {
 
 #img_produto {
     padding-left: 5px;
+    padding-top: 13px;
 }
 
 #btn_upload {
@@ -141,6 +142,10 @@ h2 {
     background-color:  transparent;
     /* background-color:  rgba(153, 153, 153, 0.4); */
     color: rgb(100, 100, 100);
+}
+
+.imgproduto{
+    display: none;
 }
 
 
