--- a/frontend-master/src/pages/Venda/styles.css
+++ b/frontend-master/src/pages/Venda/styles.css
@@ -15,7 +15,6 @@
     display: flex;
 }
 
-
 .novoproduto-container .content section {
     width: 100%;
 }
@@ -31,7 +30,7 @@
     width: 100%;
 }
 
-.novoproduto-container .content input, select, textarea {
+.novoproduto-container .content input, select {
     margin-top: 8px;
     margin-bottom: 8px;
 }
@@ -58,34 +57,27 @@
     margin-left: 8px;
 }
 
+.novoproduto-container .content form fieldset{
+    border: 0;
+    margin-left: 8px;
+}
+
 .novoproduto-container .content form .operacaoProduto{
     display: flex;
     justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .novoproduto-container .content form .operacaoProduto button{
     height: 40px;
     margin-left: 8px;
 }
+   
 
-.novoproduto-container .content form fieldset{
-    border: 0;
-    margin-left: 8px;
-}
-
-h2 {
-    padding-top: 20px;
-    padding-bottom: 15px;
-}
-
-
-#img_produto {
+#img_nf {
     padding-top: 13px;
 }
 
-#cdgProduto {
-    margin-top: 20px;
-    border-radius: 30px;
+#realizarMovimento{
+    background-color: #19a347;
 }
