--- a/frontend-master/src/styles.scss
+++ b/frontend-master/src/styles.scss
@@ -1,7 +1,9 @@
 .modal {
+    border: 1px solid black;
     width: 100%;
     height: 100vh;
-    position: absolute;
+    position: fixed; 
+    overflow: hidden;
     top: 0;
     left: 0;
     z-index: 10;
@@ -13,10 +15,10 @@
         background-color: rgba(255, 255, 255, 0.88);
         color: #000;
         width: 20%;
-        height: 10%;
+        height: 20%;
         padding: 0px;
-        border-radius: 20px;
-
+        // border: 3px solid blue;
+        border-radius: 8px;
         .close{
             background-color: transparent;
             border: none;
@@ -46,6 +48,8 @@
             }
         }
         .content{
+            // border: 1px solid red;
+            border-radius: 0px;
             background-color: transparent;
             text-align: center;
             font-size: large;
@@ -53,8 +57,52 @@
             align-items: center;
             justify-content: center;
             width: 100%;
+            height: 100%;
             padding: 0px;
-            margin-top: 10px;
+            padding-top: 20px;
+            padding-bottom: 15px;
+            margin-top: -32px;
+            font-size: 22px;
         }
+    }
+}
+
+
+.Card .Title .close{
+    position: absolute;
+    display: flex;    
+    background-color: transparent;
+    // border: 1px solid black;
+    border: none;
+    width: 28px;
+    height: 26px;
+    // height: 32px;
+    // padding-bottom: 5px;
+    padding-left: 0%;
+    // padding-top: -20px;
+    margin-top: -3px;
+    margin-left: 300px;
+    cursor: pointer;
+
+    &:before,
+    &:after {
+        content: ' ';
+        position: absolute;
+        width: 2.5px;
+        height: 24px;
+        border: 0.1px solid rgba(0, 0, 0, 0.637);
+        font-size: small;
+        font-weight: 100;
+        background-color: rgb(255, 0, 0);
+        margin-left: 10px;
+        // padding-bottom: 3px;
+        // padding-top: 5px;
+        // margin-bottom: 5px;
+    }
+    &:before {
+        transform: rotate(45deg);
+    }
+    &:after {
+        transform: rotate(-45deg);
     }
 }
