--- a/frontend-master/src/global.css
+++ b/frontend-master/src/global.css
@@ -42,6 +42,19 @@ form label {
     padding: 0 0 0 24px;
 }
 
+.tituloTela{
+    width: auto;
+    margin: 0px 0px;
+    padding: 5px 0px;
+    /* border-color: rgba(232, 184, 26, 0.959); */
+    border-style: dotted;
+    box-shadow: 3px 3px 6px rgb(0, 0, 0);
+    border-radius: 4px;
+    background-color: #000000a6;
+    color: rgb(241, 241, 241);
+    text-shadow: 1px 2px 4px rgb(0, 0, 0);
+}
+
 .button {
     width: 100%;
     height: 60px;
@@ -89,9 +102,10 @@ form label {
     margin-bottom: 50px;
     margin-top: -18px;
     border: 0;
-    border-radius: 8px;
+    border-radius: 4px;
     color: #ffffff;
     color: #ffffff;
+    box-shadow: 0px 0px 2px black;
     font-weight: 700;
     display: inline-block;
     text-align: center;
@@ -104,14 +118,57 @@ form label {
     filter: brightness(90%);
 }
 
+#btn_editMov{
+    background: #c5a514e7;
+    padding: 5px 10px;
+    margin-bottom: 50px;
+    margin-top: -18px;
+    border: 1px solid black;
+    box-shadow: 0px 0px 2px black;
+    border-radius: 4px;
+    font-weight: 700;
+    display: none;
+    /* display: inline-block; */
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    transition: filter 0.2s;
+}
+
+#btn_editMov:hover{
+    filter: brightness(90%);
+}
+
+#btn_confirmEditMov{
+    background: #3a3939;
+    color: white;
+    padding: 5px 10px;
+    margin-bottom: 50px;
+    margin-top: -18px;
+    border: 1px solid black;
+    box-shadow: 0px 0px 2px black;
+    border-radius: 4px;
+    font-weight: 700;
+    display: none;
+    /* display: inline-block; */
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+#btn_confirmEditMov:hover{
+    filter: brightness(90%);
+}
+   
+
 #btn_add{
     background: #228B22;
     padding: 5px 10px;
     margin-bottom: 30px;
     border: 0;
-    border-radius: 8px;
+    border-radius: 4px;
     color: #ffffff;
-    color: #ffffff;
+    box-shadow: 0px 0px 2px black;
     font-weight: 700;
     display: inline-block;
     text-align: center;
@@ -128,7 +185,8 @@ form label {
     background: #e02041;
     padding: 5px 10px;
     border: 0;
-    border-radius: 8px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 2px black;
     color: #ffffff;
     color: #ffffff;
     font-weight: 700;
