--- a/frontend-master/src/components/Header/Menu.css
+++ b/frontend-master/src/components/Header/Menu.css
@@ -1,9 +1,10 @@
 .menu {
     background-color: #f8f8f8;
     box-shadow: 0px 2px 24px 0px rgba(0, 0, 0, 0.15);
-    border-radius: 8px;
+    /* border-radius: 8px; */
     width: 100%;
-    height: 10vh;
+    min-width: 100vh;
+    min-height: 70px;
     display: flex;
     justify-content: space-between;
     padding: 0 40px;
@@ -12,26 +13,33 @@
 
 .menu__right {
     display: flex;
+    position: absolute;
     align-items: center;
+    width: 93vw;
     height: 100%;
+    /* border: 1px solid red; */
 }
 
 .menu__list {
+    /* width: 1300px; */
+    /* border: 1px solid blue; */
     list-style-type: none;
     padding: 0;
     height: 100%;
-    margin: 0;
-    margin-right: 10vw;
+    min-width: 100%;
+    padding-left: 40%;
+    margin-right: 5vw;
 }
 
 .menu__list-item {
     display: inline-block;
     height: 100%;
-    margin-right: 20px;
+    min-width: auto;
+    margin-right: 10px;
 }
 
 .menu__list-item:last-child {
-    margin-right: 0;
+    margin-right: 10px;
 }
 
 .menu__link {
@@ -44,6 +52,7 @@
     display: flex;
     align-items: center;
     padding: 0 3px;
+    min-width: auto;
 }
 
 .menu__link:hover {
@@ -57,6 +66,7 @@
 }
 
 .menu__logo {
+    position: absolute;
     text-indent: -9999999px;
     display: inline-block;
     height: 100%;
