--- a/frontend-master/src/components/Layout/Card.css
+++ b/frontend-master/src/components/Layout/Card.css
@@ -1,3 +1,5 @@
+/* ////////////////////////////////////// CARD RELATORIO ////////////////////  */
+
 .Card {
     border: 3px solid;
     border-radius: 10px;
@@ -7,16 +9,18 @@
     
     display: flex;
     flex-direction: column;
-    min-width: 350px;
-    max-width: 30px;
+    max-width: 350px;
 }
 
 .Card .Title{
-    padding: 5px 0px;
+    /* border: 1px solid blue; */
+    text-shadow: 0px 0px 2px rgba(0,0,0, 1);
+    padding: 2px 0px;
+    margin-top: -2px;
     color: white;
     display: flex;
     justify-content: center;
-    font-size: 18px;
+    font-size: 19px;
 }
 
 .Card .CdgProduto h2{ 
@@ -48,14 +52,14 @@
     width: 250px;
     margin: auto; 
     border-radius: 10%;
+    margin-top: 5px;
+    margin-bottom: 20px;
 }
 
 
 .Card .Descricao{
     background-color: #fff;
     display: flex;
-    /* justify-content: left; */
-    /* align-items: center; */
     height: 60px;
     position: relative;
     padding: 0px;
@@ -66,15 +70,14 @@
 
 .Card .Descricao h2{ 
     /* border: 1px solid black; */
-    width: 98%;
-    height: auto;
+    width: 380px;
+    text-indent: 0.0em;
     position: relative;
-    margin-left: 4px;
     margin-right: 0px;
     margin-top: 0px;
     margin-bottom: 4px;
     font-weight: normal;
-    padding: 1px 0px 0px 0px;
+    padding: 1px 10px 0px 10px;
     color:#6b6b6b;
     word-wrap: break-word
 }
@@ -97,32 +100,26 @@
 
 .Card .QtdeProduto{
     background-color: #fff;
-    padding: 8px 0px 0px 0px;
+    padding: 8px 3px 0px 31px;
     display: flex;
     height: auto;
     width: auto;
-    /* border: 1px solid black; */
+    /* border: 1px solid blue; */
 }
 
 .Card .QtdeProduto h2{ 
-    /* margin-left: 10px; */
     position: static;
+    background-color: #6b6b6b28;
     border: 1px solid black;
     border-radius: 4px;
-    background-color: #6b6b6b28;
     margin-left: 200px;
     font-size: 15px;
-    padding: 2px;
     color: #332e2e;
     padding: 2px 5px;
-    /* padding-bottom: 10px; */
-    /* padding-top: -40px; */
     height: auto;
     width: 140px;
     text-align: right;
 }
-
-
 
 .Card .CdgProduto{
     background-color: #fff;
@@ -130,6 +127,88 @@
     display: flex;
     border-bottom: 1px dotted black;
     
+}
+
+/* ////////////////////////////////////// CARD RELATORIO ////////////////////  */
+
+.headerDelete{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    width: 80%;
+    min-width: 300px;
+    height: 30px;
+    top: -85px;
+    left: 180px;
+    
+    font-size: 18.9px;
+    text-align: right;
+    /* border: 2px solid rgb(0, 255, 34); */
+}
+
+
+/* Div Input radio */
+.Card .formExcluir .input-group{
+    display: flex;
+    min-width: 380px;
+    width: 380px;
+    height: 30px;
+    right: 150px;
+    margin-top: 30px;
+    position: relative;
+    /* border: 2px solid rgb(253, 194, 0); */
+} 
+
+.Card .formExcluir .input-group input{
+    height: 27px;
+    width: 20px;
+    margin-left: 70px;
+} 
+
+
+
+
+.Card .formExcluir .input-group p{
+    margin-left: 5px;
+} 
+
+.Card .formExcluir .input-group p + input{
+    margin-left: 110px;
+} 
+
+
+.Card .formExcluir form .input-group  input + input{
+    height: 27px;
+    margin-right: 20px;
+} 
+
+/* Div do botão excluir */
+.Card .btnExcluir{
+    display: flex;
+    position: relative;
+    width: 380px;
+    height: 44px;
+    min-width: 380px;
+    justify-content: center;
+    right: 148px;
+    font-size: 18.8px;
+    text-align: right;
+    margin-top: 30px;
+    /* border: 2px solid rgb(219, 149, 20); */
+}
+
+/* Botão excluir */
+.Card .formExcluir button{
+    height: 40px;
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 5px;
+    transition: 0.7s;
+}
+
+.Card .formExcluir button:hover{
+    transition: 0.7s;
+    background-color: #6b6b6b2c;
 }
 
 
