--- a/frontend-master/src/pages/CadastroFornecedor/styles.css
+++ b/frontend-master/src/pages/CadastroFornecedor/styles.css
@@ -1,5 +1,5 @@
 .novofornecedor-container {
-    width: 100%;
+    width: 90%;
     max-width: 1120px;
     height: 100vh;
     margin: 20px auto;
@@ -9,6 +9,7 @@
     width: 100%;
     padding: 96px;
     padding-top: 30px;
+    padding-bottom: 30px;
     background: #f0f0f5;
     box-shadow: 0 0 100px rgba(0,0,0, 0.1);
     border-radius: 8px;
@@ -23,7 +24,7 @@
 .novofornecedor-container .content section h1 {
     display: flex;
     justify-content: center;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     font-size: 32px;
 }
 
@@ -81,19 +82,22 @@ h2 {
 }
 
 #btn_cep {
-    margin-top: 31px;
+    position: absolute;
+    margin-top: 35px;
+    margin-left: -70px;
+    background-color: transparent;
     height: 47px;
     width: 48px;
-    /* border: 0px; */
-    background-color: #f0f0f5; 
-    border-radius: 6px;
+    border: 0px;
+    /* background-color: #f0f0f5;  */
+    /* border-radius: 6px; */
     /* background-color: rgb(247, 245, 245); */
-    background-image: url("../../assets/btn_search.png") ;
-
+    /* background-image: url("../../assets/btn_search.png") ; */
 }
 
 #btn_cep:hover {
     transition: 0.5s;
-    filter: brightness(95%);
+    size: 50px;
+    color: #0f0f0f;
 }
 
