--- a/frontend-master/src/styles.scss
+++ b/frontend-master/src/styles.scss
@@ -9,25 +9,29 @@
     z-index: 10;
     background-color: rgba(0,0,0,0.8);
     display: flex;
+    min-width: 350px;
     justify-content: center;
     align-items: center;
     .container{
+        // display: flex;
         background-color: rgba(255, 255, 255, 0.88);
         color: #000;
         width: 20%;
         height: 20%;
         padding: 0px;
+        padding-bottom: 35px;
         // border: 3px solid blue;
         border-radius: 8px;
+        min-width: 380px;
+        min-height: 180px;
         .close{
+            // border: 1px solid red;
             background-color: transparent;
             border: none;
-            outline: none;
             width: 32px;
             height: 32px;
-            // padding-bottom: 15px;
-            right: calc(-100% + 35px);
-            top: 5px;
+            right: calc(-100% + 25px);
+            top: 1px;
             cursor: pointer;
             display: flex;
             position: relative;
@@ -48,20 +52,21 @@
             }
         }
         .content{
-            // border: 1px solid red;
+            border-top: 1px solid black;
             border-radius: 0px;
             background-color: transparent;
+            // text-indent: 0.5em;
             text-align: center;
             font-size: large;
             font-weight: bolder;
             align-items: center;
             justify-content: center;
-            width: 100%;
+            width: 380px;
             height: 100%;
-            padding: 0px;
+            
             padding-top: 20px;
             padding-bottom: 15px;
-            margin-top: -32px;
+            padding: 0px;
             font-size: 22px;
         }
     }
@@ -69,35 +74,71 @@
 
 
 .Card .Title .close{
+    // border: 1px solid blue;
     position: absolute;
     display: flex;    
     background-color: transparent;
-    // border: 1px solid black;
     border: none;
     width: 28px;
     height: 26px;
-    // height: 32px;
-    // padding-bottom: 5px;
-    padding-left: 0%;
-    // padding-top: -20px;
-    margin-top: -3px;
-    margin-left: 300px;
+    padding-left: 0px;
+    margin-top: 0px;
+    margin-left: 335px;
     cursor: pointer;
 
     &:before,
     &:after {
         content: ' ';
+        // border: 1px solid black;
         position: absolute;
-        width: 2.5px;
-        height: 24px;
-        border: 0.1px solid rgba(0, 0, 0, 0.637);
+        width: 1px;
+        height: 20px;
+        border: 2px solid rgba(0, 0, 0, 0.637);
         font-size: small;
         font-weight: 100;
         background-color: rgb(255, 0, 0);
-        margin-left: 10px;
-        // padding-bottom: 3px;
-        // padding-top: 5px;
-        // margin-bottom: 5px;
+        // margin-left: 25px;
+        margin-top: -1px;
+        box-shadow: 0px 0px 2px black;
+        transition: 0.4s;
+    }
+    &:before {
+        transform: rotate(45deg);
+    }
+    &:after {
+        transform: rotate(-45deg);
+    }
+}
+
+
+.Card .Title .close:hover{
+    // border: 1px solid blue;
+    position: absolute;
+    display: flex;    
+    background-color: transparent;
+    border: none;
+    width: 28px;
+    height: 26px;
+    padding-left: 0px;
+    margin-top: 0px;
+    margin-left: 335px;
+    cursor: pointer;
+
+    &:before,
+    &:after {
+        content: ' ';
+        // border: 1px solid black;
+        position: absolute;
+        width: 1px;
+        height: 20px;
+        border: 2px solid rgba(0, 0, 0, 0.637);
+        font-size: small;
+        font-weight: 100;
+        transition: 0.4s;
+        background-color: rgb(206, 22, 22);
+        // margin-left: 25px;
+        margin-top: -1px;
+        box-shadow: 0px 0px 2px black;
     }
     &:before {
         transform: rotate(45deg);
